rendering the selected list into the task container, fixing list overflow

--- a/style.css
+++ b/style.css
@@ -294,6 +294,8 @@ header {
     justify-content: space-between;
     transition: 0.15s linear;
     overflow-x: hidden;
+    overflow: hidden;
+    min-height: 40px;
 }
 
 .lists:hover {
